# perpl-dex-sdk

./: Cargo.toml
abi/dex/: Errors.abi.json  Exchange.json  REVISION
crates/sdk/src/: lib.rs  num.rs
crates/sdk/src/state/: event.rs  exchange.rs  mod.rs  perpetual.rs  position.rs
crates/sdk/src/tests/: exchange.rs
crates/sdk/src/types/: request.rs
crates/sdk/tests/: scenarios.rs
